[gd_scene load_steps=8 format=2]

[ext_resource path="res://objects/menu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Nootdorp Regular Demo.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://objects/menu/fps.gd" type="Script" id=3]
[ext_resource path="res://scenes/upgraded/assets/images/mainmenu.png" type="Texture" id=4]
[ext_resource path="res://scenes/upgraded/assets/images/mainmenu.wav" type="AudioStream" id=5]
[ext_resource path="res://objects/menu/AudioStreamPlayer.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 62
outline_size = 4
outline_color = Color( 0.909804, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]
z_index = 4096

[node name="Classic" type="Button" parent="Node2D"]
margin_left = 981.801
margin_top = 254.764
margin_right = 1294.8
margin_bottom = 345.764
custom_fonts/font = SubResource( 1 )
text = "> Play Classic"

[node name="Upgrade" type="Button" parent="Node2D"]
margin_left = 965.946
margin_top = 375.586
margin_right = 1303.95
margin_bottom = 466.586
custom_fonts/font = SubResource( 1 )
text = "> Play Upgrade"

[node name="Exit" type="Button" parent="Node2D"]
margin_left = 976.946
margin_top = 494.513
margin_right = 1289.95
margin_bottom = 585.513
custom_fonts/font = SubResource( 1 )
text = "> Quit"

[node name="Label" type="Label" parent="."]
margin_left = -2.0
margin_right = 109.0
margin_bottom = 52.0
script = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 684, 384 )
z_index = -4096
z_as_relative = false
texture = ExtResource( 4 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -30.0
autoplay = true
script = ExtResource( 6 )

[connection signal="pressed" from="Node2D/Classic" to="." method="_on_Classic_pressed"]
[connection signal="pressed" from="Node2D/Upgrade" to="." method="_on_Upgrade_pressed"]
[connection signal="pressed" from="Node2D/Exit" to="." method="_on_Exit_pressed"]
